fix ios vertical align

--- a/src/district-heart/sass/participant.scss
+++ b/src/district-heart/sass/participant.scss
@@ -323,8 +323,6 @@
 
       input {
         line-height: normal;
-        line-height: 1.2em;
-        height: 36px;
       }
     }
     
